# obsidian-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/: Dockerfile.base  auth.py  builtin_tools.py  database_mongo.py  encryption.py  eval_engine.py  file_storage.py  main.py  mcp_client.py  models.py  models_mongo.py  optimizer.py  pyproject.toml  rag_service.py  sandbox_tools.py  scheduler.py  scheduler_executor.py  schemas.py
backend/llm/: anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
backend/rag_indexes/: kb_699bf504a86d3e0b77867045.faiss  session_32.faiss
backend/routers/: admin_router.py  agents_router.py  analytics_router.py  auth_router.py  chat_router.py  dashboard_router.py  eval_router.py  files_router.py  knowledge_router.py  mcp_servers_router.py  memory_router.py  optimizer_router.py  prompt_vault_router.py  providers_router.py  sandbox_router.py  schedule_router.py  secrets_router.py  sessions_router.py  settings_router.py  teams_router.py  tools_router.py  traces_router.py  user_router.py  versions_router.py  whatsapp_router.py  workflow_runs_router.py  workflows_router.py
backend/services/: agent_runner.py  tts_service.py  whatsapp_service.py
frontend/: auth.ts  next.config.ts  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(authenticated)/: layout.tsx
frontend/app/api/: playground.ts  routes.ts
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: app-shell.tsx  app-sidebar.tsx  header.tsx
frontend/components/ai-elements/: artifact.tsx  chain-of-thought.tsx  file-tree.tsx  hitl-approval.tsx  jsx-preview.tsx  message.tsx  plan.tsx  prompt-input.tsx  reasoning.tsx  research-progress.tsx  scroll-button.tsx  sources.tsx  terminal.tsx  tool-proposal-card.tsx  tool.tsx  (+2 more)
frontend/config/: routes.ts
frontend/hooks/: use-confirm.tsx
frontend/lib/: api-client.ts  stream.ts
frontend/stores/: admin-store.ts  dashboard-store.ts  permissions-store.ts  playground-store.ts
frontend/types/: os.ts  playground.ts
wa-bridge/: index.js  package.json
(+109 files in other folders)
